Added a bunch of stuff that I dont remember all of it. uses variable highpass filters to get standard mouse movement.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,10 @@ add_executable(main
 )
 
 # Pull in dependencies
-target_link_libraries(main PUBLIC pico_stdlib pico_unique_id tinyusb_device tinyusb_board)
+target_link_libraries(main PUBLIC
+  pico_stdlib hardware_spi hardware_pwm # Main logic libraries.
+  pico_unique_id tinyusb_device tinyusb_board # USB boilerplate.
+)
 
 # Make sure TinyUSB can find tusb_config.h
 target_include_directories(main PRIVATE
